# ai_microservice

./: .env  .env.example  .gitignore  Dockerfile  Makefile  app.yaml  info.md  inspect_chromadb.py  pyproject.toml  requirements.txt  test_add_transaction.py  test_facials_api.sh  verify_facials_endpoints.py
ai_project/: settings.py  urls.py
chatbot/: agent.py  ai_scan_api.py  ai_scan_service.py  api.py  services.py  tools.py
