[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_microservice"
version = "0.1.0"
description = "AI Microservice for RAG chatbot"
readme = "README.md"
requires-python = ">=3.9"
# Add your main dependencies here if desired, though we used pip directly earlier
# dependencies = [
#     "django",
#     "langchain",
#     "chromadb",
#     # ... etc
# ]

[tool.poe.tasks]
# Task to run the Django server
start = "python manage.py runserver"

# Task to run migrations
migrate = "python manage.py migrate"

# Task to spawn a new shell *with the environment activated*
# Uses your current shell (zsh)
shell = "zsh"

# Example linting task (if you add flake8, for instance)
# lint = "flake8 ." 